--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Lunar New Year</title>
+    <title>Happy New Year</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body class="glow">
     <h2 class="text"> Happy New Year</h2>
-    <h2>2023</h2>
+    <h2>2024</h2>
     <canvas id="Canvas"> <></canvas>
     <script src="./app.js"></script>
 </body>
